# HIS-Monitor-rs

./: .gitignore  Cargo.toml  README.md
configs/: monitor.dev.yaml  monitor.prod.yaml  monitor.yaml
crates/monitor-alert/: Cargo.toml
crates/monitor-alert/src/: lib.rs  manager.rs  router.rs  silence.rs
crates/monitor-alert/src/notify/: channels.rs  mod.rs
crates/monitor-alert/src/rule/: mod.rs
crates/monitor-api/: Cargo.toml
crates/monitor-api/src/: lib.rs  main.rs
crates/monitor-api/src/handler/: mod.rs
crates/monitor-api/src/middleware/: mod.rs
crates/monitor-api/src/server/: mod.rs
crates/monitor-collector/: Cargo.toml
crates/monitor-collector/src/: lib.rs
crates/monitor-collector/src/exporter/: mod.rs  postgres.rs  rabbitmq.rs  redis.rs
crates/monitor-collector/src/pipeline/: mod.rs
crates/monitor-collector/src/receiver/: mod.rs
crates/monitor-collector/src/scraper/: mod.rs  parser.rs
crates/monitor-core/: Cargo.toml  build.rs
crates/monitor-core/src/: lib.rs
crates/monitor-core/src/config/: mod.rs
crates/monitor-core/src/error/: mod.rs
crates/monitor-core/src/model/: alert.rs  health.rs  metric.rs  mod.rs  trace.rs
crates/monitor-core/src/protocol/: mod.rs
crates/monitor-core/src/protocol/proto/: alert.proto  monitor.proto
crates/monitor-core/src/util/: mod.rs
crates/monitor-probe/: Cargo.toml
crates/monitor-probe/src/: lib.rs  main.rs
crates/monitor-probe/src/engine/: mod.rs
crates/monitor-probe/src/scenario/: mod.rs
crates/monitor-processor/: Cargo.toml
crates/monitor-processor/src/: lib.rs
crates/monitor-processor/src/aggregator/: mod.rs
crates/monitor-processor/src/anomaly/: baseline.rs  detector.rs  mod.rs
crates/monitor-processor/src/stream/: mod.rs
dashboards/: his-overview.json
deploy/docker/: Dockerfile
docker/: .env.example  docker-compose.monitoring.yml
docs/: HIS-Monitor-rs后台监控系统架构设计.md  学习手册.md
web/: app.js  index.html  style.css
