[package]
name = "monitor-alert"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
monitor-core = { path = "../monitor-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
anyhow = { workspace = true }
