[package]
name = "monitor-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "monitor-api"
path = "src/main.rs"

[dependencies]
monitor-core = { path = "../monitor-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
