[package]
name = "monitor-collector"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
monitor-core = { path = "../monitor-core" }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
prometheus = { workspace = true }
async-trait = "0.1"
