[package]
name = "monitor-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
reqwest = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true, optional = true }

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
serde_yaml = "0.9"

[features]
default = []
grpc = ["tonic"]
