[package]
name = "monitor-probe"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "monitor-probe"
path = "src/main.rs"

[dependencies]
monitor-core = { path = "../monitor-core" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
prometheus = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
